[package]
name = "rust-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.9"
rocket = "0.4.2"
serde = "1.0.101"
serde_derive = "1.0.101"
slog = "2.5.2"
sloggers = "0.3.4"
failure = "0.1.6"